add decrease lottery function
